--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -48,7 +48,7 @@
 
           {% if site.linkedin %}
           <a href="{{ site.linkedin }}" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-twitter"></i>
           </a>
           {% endif %}
           {% if site.linkedin %}
