--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -46,8 +46,8 @@
         {% endif %}
         <div class="social-icons">
 
-          {% if site.linkedin %}
-          <a href="{{ site.linkedin }}" target="_blank">
+          {% if site.twitter %}
+          <a href="{{ site.twitter }}" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
           {% endif %}
